--- a/package.json
+++ b/package.json
@@ -26,13 +26,17 @@
         "@nestjs/jwt": "^11.0.0",
         "@nestjs/mapped-types": "*",
         "@nestjs/mongoose": "^11.0.3",
+        "@nestjs/passport": "^11.0.5",
         "@nestjs/platform-express": "^11.0.1",
         "@types/bcrypt": "^5.0.2",
+        "@types/passport-google-oauth20": "^2.0.16",
         "bcrypt": "^6.0.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.2",
         "mongoose": "^8.16.1",
         "nodemailer": "^7.0.4",
+        "passport": "^0.7.0",
+        "passport-google-oauth20": "^2.0.0",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1",
         "uuid": "^11.1.0"
