--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "nodemailer": "^7.0.4",
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
+        "pdfmake": "^0.2.20",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1",
         "uuid": "^11.1.0"
@@ -53,6 +54,7 @@
         "@types/jest": "^29.5.14",
         "@types/node": "^22.10.7",
         "@types/nodemailer": "^6.4.17",
+        "@types/pdfmake": "^0.2.11",
         "@types/supertest": "^6.0.2",
         "eslint": "^9.18.0",
         "eslint-config-prettier": "^10.0.1",
