--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "private": true,
     "license": "UNLICENSED",
     "scripts": {
-        "build": "nest build && npm run copy:templates",
-        "copy:templates": "copyfiles -u 2 src/templates/**/* dist/templates",
+        "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
         "start:dev": "nest start --watch",
